[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/overlay/vr2dscene/vr2dscene.gd" type="Script" id=2]
[ext_resource path="res://ui/overlay/vr2dscene/notification.wav" type="AudioStream" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="VR2DScene" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DimTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 2880 )
size_override_stretch = true
transparent_bg = true
usage = 0
render_target_update_mode = 3

[node name="VRBackground" type="ColorRect" parent="Viewport"]
margin_bottom = -2160.0

[node name="WidgetsContainer" type="Control" parent="Viewport"]
margin_bottom = -2160.0

[node name="VROverlayScreen" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 2880.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 1 )
stretch_mode = 1
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="DimTimer" to="." method="_on_DimTimer_timeout"]
